# StarReach

./: .gitignore  CMakeLists.txt  README.md  ar3_saber.txt  png_processing.txt  redeemer.txt  scythe.txt
assets/shaders/: lighting.frag  sun_surface.frag
config/: buildables.json  faction_relations.json  factions.json  items.json  materials.json  modules.json  npc_profiles.json  planet_types.json  ships.json  stars.json  station_defs.json  station_types.json
config/progression/: MaterialCosts.json
src/: main.cpp
src/analytics/: CraftingTelemetry.cpp  CraftingTelemetry.h
src/components/: FleetAIComponent.h
src/core/: AudioManager.cpp  AudioManager.h  Contract.h  EntityBlueprints.h  EventBus.h  FactionEnum.h  FleetManager.cpp  FleetManager.h  GameManager.cpp  GameManager.h  GameMode.h  GameModeManager.cpp  GameModeManager.h  InventoryManager.cpp  InventoryManager.h  Module.h  PlayerStation.h  QuestManager.cpp  QuestManager.h  SaveManager.cpp  SaveManager.h  ShipDef.h  ShipRegistry.cpp  ShipRegistry.h  StarSystem.h  StationEconomy.h  StorageItem.h  WorldManager.cpp  WorldManager.h
src/data/: DataRegistry.cpp  DataRegistry.h  ItemDef.h  JsonLoader.h  MaterialDefs.h  PlayerStationDef.h
src/data/items/: BasicItemDefs.h
src/data/modules/: ArmorDefs.h  AuxDefs.h  ConsumableDefs.h  EngineDefs.h  FacilityDefs.h  HyperdriveDefs.h  ModuleLookup.h  ShieldDefs.h  WeaponDefs.h
src/data/registry/: BuildableRegistry.cpp  BuildableRegistry.h  FactionRegistry.cpp  FactionRegistry.h  ItemRegistry.cpp  ItemRegistry.h  MaterialRegistry.cpp  MaterialRegistry.h  ModuleRegistry.cpp  ModuleRegistry.h  NpcProfileRegistry.cpp  NpcProfileRegistry.h  PlanetTypeRegistry.cpp  PlanetTypeRegistry.h  PlayerStationRegistry.cpp  PlayerStationRegistry.h  StarRegistry.cpp  StarRegistry.h  StarSystemRegistry.h  StationTypeRegistry.cpp  StationTypeRegistry.h  UniverseRegistry.h
src/engine/: AISystem.h  CameraSystem.h  CombatSystem.h  DamageSystem.h  LightingSystem.cpp  LightingSystem.h  MovementSystem.h  NetworkSyncSystem.h  PlayerInputSystem.h  Projectile.h  RenderSystem.h  ResourceManager.cpp  ResourceManager.h  SpriteCache.cpp  SpriteCache.h
src/items/: AttributeRegistry.cpp  AttributeRegistry.h  BlueprintManager.cpp  BlueprintManager.h  GradeRegistry.cpp  GradeRegistry.h  Item.cpp  Item.h  SalvageManager.cpp  SalvageManager.h  SynergyManager.h
src/modes/: IGameMode.h
src/modes/builder/: Builder.cpp  Builder.h
src/modes/main_menu/: MainMenu.cpp  MainMenu.h
src/modes/planet/: Planet.cpp  Planet.h
src/modes/space_flight/: Asteroid.h  BuildMenu.cpp  BuildMenu.h  GalacticMap.cpp  GalacticMap.h  GalaxyMap.cpp  GalaxyMap.h  MiningStationMenu.cpp  MiningStationMenu.h  ModulesMenu.cpp  ModulesMenu.h  Projectile.h  SpaceFlight.cpp  SpaceFlight.h  StationModuleMenu.cpp  StationModuleMenu.h  StationServicesMenu.cpp  StationServicesMenu.h  StorageMenu.cpp  StorageMenu.h  SystemMap.cpp  SystemMap.h
src/modes/space_flight/systems/: DockRepair.cpp  DockRepair.h  HostileTargeting.cpp  HostileTargeting.h
src/net/: NetCommon.h  NetSession.cpp  NetSession.h  NetworkManager.h  Protocol.h
src/progression/: ProgressionRegistry.cpp  ProgressionRegistry.h
src/services/: EngineerService.cpp  EngineerService.h
src/shared/: Entity.h
src/shared/entities/: AIControllerComponent.h  AttributeSet.h  DockingPortComponent.h  Hardpoint.h  HealthComponent.h  InventoryComponent.h  LoadoutComponent.h  NetworkComponent.h  SpriteComponent.h  TransformComponent.h
src/shared/ui/: HudTheme.h
src/systems/ai/: BehaviorRegistry.cpp  BehaviorRegistry.h  FleetManager.cpp  FleetManager.h
src/systems/comms/: CommunicationSystem.cpp  CommunicationSystem.h
src/systems/diplomacy/: DiplomacySystem.cpp  DiplomacySystem.h  DiplomaticRegistry.cpp  DiplomaticRegistry.h  ReputationRegistry.cpp  ReputationRegistry.h
src/systems/interaction/: DockingSystem.cpp  DockingSystem.h
src/ui/: EngineerMenu.cpp  EngineerMenu.h  SavePicker.cpp  SavePicker.h  SaveWriter.cpp  SaveWriter.h
src/ui/controllers/: StationMenuController.cpp  StationMenuController.h
src/ui/menus/: StationMenuView.h
tests/diplomacy/: DiplomaticRegistryTests.cpp
tests/simulation/: FactionEncounterSimulation.cpp  ItemCraftingBalanceTest.cpp
tools/bgremove/: bgremove.py  paintblack.ps1
tools/img2pixel/: CMakeLists.txt  main.cpp
tools/pngclean/: CMakeLists.txt  main.cpp
tools/simulation/: ItemGenerationSimulator.cpp
